# A2A-Agent

./: README copy.md  README.md  README_detailed.md  pyproject.toml
.github/workflows/: ci.yml
buyer_concierge/: Dockerfile  agent_card.json  main.py  models.py
buyer_concierge/adapters/: a2a_client.py  db_repository.py
buyer_concierge/service/: ports.py  rfq_service.py
buyer_concierge/tests/: test_main.py
buyer_concierge/tests/adapters/: test_a2a_client.py  test_db_repository.py
buyer_concierge/tests/service/: test_rfq_service.py
infra/: cloudrun.yaml  docker-compose.yml
libs/schemas/: quote-v1.json  rfq-v1.json
scripts/: lint-and-test.sh
shared/: db.py  logging.py  models_db.py  settings.py
supplier_quoter/: Dockerfile  agent_card.json  catalog.py  main.py  models.py
supplier_quoter/tests/: test_main.py
tests/integration/: conftest.py  test_rfq_flow.py
